src/styl/responsive/tablet-portrait.styl
$header-height= 50px

// HEADER

#nav-list li:first-child
  margin-right: $margin-basic

#main-content
  padding-bottom: $header-height * 2

.post-type-archive-exhibition
  #main-content
    padding-bottom: $header-height

#header-tagline
  font-size: 11px

// EXHIBITION

.masonry-item
  width: 50%
  padding: 0 $margin-tiny

// ABOUT

#about-galleries
  flex-wrap: nowrap
  h3
    font-size: $font-size-basic

#mailing-list-holder
  padding: $margin-small $margin-basic $margin-mid

  .mc-field-group
    padding: $margin-small 0
    label,
    input
      margin-bottom: $margin-micro
    input
      padding: $margin-micro 0
    div.mce_inline_error
      margin: $margin-micro 0 0 0

  input.button
    font-size: $font-size-mid
    margin-top: $margin-tiny

#map-holder
  iframe
    position: absolute
    width: calc('100% - ' + $margin-small)
    height: 100%

